# PPCHEM_molstorage

./: =25  LICENSE  README.md  app.py  improved_function_docs.md  pyproject.toml  test.py  tox.ini
docs/source/: conf.py
docs/source/api/: chemstorm.rst  modules.rst
notebooks/: README.md  chemstorm_report.ipynb  chemstorm_report_copy.ipynb  molstorage_report.ipynb  pictograms_compatibilities.ipynb
sort/my-new-package/: .copier-answers.yml  LICENSE  README.md
sort/my-new-package/docs/source/: conf.py
sort/my-new-package/tests/: test_example_module.py
src/chemstorm/: __init__.py  app.py  chemstorm.py
src/molstorage/: A_cid_safety_sort.ipynb  App_corr.py  Charlotte.py  Noor.py  __init__.py  app.py  app_2.py  app_run.py  daphne.py  example_module.py  mdr.py  molstorage.py  molstorage_final.py  noor2.py  noor_checked.py  test.py
tests/: test_chemstorm.py  test_example_module.py  tests.py
