[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molstorage"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Storage of chemicals based on their properties and interactions with each other."
dependencies = [
    "rdkit",  # For cheminformatics
    "requests",  # For making HTTP requests
    "pubchempy",  # For interacting with PubChem API
    "typing-extensions",  # For type annotations (use only if < Python 3.9)
]
authors = [
    {name = "Delacou Daphné", email = "daphne.delacou@epfl.ch"},
    {name = "Mercier Charlotte", email = "charlotte.mercier@epfl.ch"},
    {name = "Verstraete Noor", email = "noor.verstraete@epfl.ch"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/ddelacou/molstorage"
tracker = "https://github.com/ddelacou/molstorage/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/molstorage/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.mypy]
ignore_missing_imports = true